Fixed issue with footer spacing.

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -277,11 +277,11 @@ p.subtitle-text {
     margin-top: -35px;
     max-width: 600px;
     @media screen and (min-width: 369px) and (max-width: 749px) {
-         margin: 0 auto;
+         margin: 0 auto 50px;
     }
     
     @media screen and (min-width: 750px) {
-         margin: 10% auto 0;
+         margin: 10% auto 50px;
     } 
     
 }
